--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -8,7 +8,7 @@
 
   <body>
     <h1>The Ultimate Reversed String!</h1>
-
+    <p><%= @reverse %></p>
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
 
   </body>
