--- a/views/friends.erb
+++ b/views/friends.erb
@@ -11,5 +11,9 @@
 
     <!-- Iterate through the @friends array here to display each item in its own <h2> tag -->
 
+    <% @friends.each do |friend| %>
+      <h2><br><%= friend \n%></p></br></h2>
+    <% end %>
+
   </body>
 </html>
